--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
 * {
+  margin: 0;
+  padding: 0;
   font-family: "Montserrat", sans-seri;
   box-sizing: border-box; }
 
@@ -89,137 +85,19 @@
     .container-principal .libros-onfire .books-content a:hover {
       background-color: #000; }
 
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat", sans-seri; }
-
-.container-index {
-  width: 100%;
-  height: 100vh;
-  background-image: url(/assets/media/fondo.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  padding-top: 30px;
-  box-sizing: border-box; }
-  .container-index .navbar {
-    width: 100%;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background: rgba(29, 33, 61, 0.5);
-    padding: 0 60px;
-    box-sizing: border-box; }
-  .container-index .logo {
-    width: 155px; }
-    .container-index .logo h1 {
-      width: 30px;
-      position: relative;
-      font-family: "Amita", cursive;
-      z-index: 10;
-      cursor: pointer;
-      color: #fff; }
-  .container-index nav {
-    flex: 1; }
-    .container-index nav li {
-      list-style: none;
-      display: inline-block;
-      margin-right: 60px; }
-      .container-index nav li a {
-        text-decoration: none;
-        color: #fff;
-        font-size: 14px; }
-  .container-index .user {
-    display: flex;
-    align-items: center;
-    color: #fff;
-    font-size: 14px; }
-    .container-index .user img {
-      width: 30px;
-      margin-left: 15px;
-      cursor: pointer;
-      border-radius: 100px; }
-  .container-index .sidebar {
-    width: 155px;
-    height: 100vh;
-    background: rgba(29, 31, 58, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0; }
-    .container-index .sidebar .search {
-      width: 20px;
-      display: block;
-      margin: 120px auto 0;
-      color: #fff; }
-    .container-index .sidebar .social-links {
-      width: 20px;
-      display: block;
-      margin: 220px auto 0;
-      text-align: center; }
-      .container-index .sidebar .social-links i {
-        color: #fff;
-        height: 15px;
-        margin-bottom: 30px; }
-    .container-index .sidebar .inf {
+footer {
+  padding: 40px 0;
+  background-color: #000; }
+  footer .footer-social {
+    text-align: center;
+    padding-bottom: 25px;
+    color: #fff; }
+    footer .footer-social a {
       color: #fff;
-      width: 20px;
-      position: absolute;
-      left: 50%;
-      bottom: 30px;
-      transform: translateX(-50%); }
-  .container-index .msg-container {
-    width: 600px;
-    height: 280px;
-    position: absolute;
-    left: 14%;
-    top: 57%;
-    transform: translateY(-50%);
-    overflow: hidden; }
-    .container-index .msg-container #slider {
-      display: inline-flex;
-      transition: 0.5s; }
-    .container-index .msg-container .msg-col {
-      width: 600px;
-      height: 200px; }
-      .container-index .msg-container .msg-col h1 {
-        color: #fff;
-        font-size: 80px;
-        font-weight: 100;
-        margin: 10px  0; }
-      .container-index .msg-container .msg-col p {
-        color: #ddd;
-        font-size: 15px;
-        line-height: 25px; }
-      .container-index .msg-container .msg-col a {
-        display: inline-block;
-        text-decoration: none;
-        color: #555;
-        background: #fff;
-        font-size: 15px;
-        padding: 10px 35px;
-        border-radius: 30px;
-        margin-top: 25px; }
-  .container-index .controller {
-    width: 1px;
-    height: 320px;
-    display: block;
-    background-color: #c0c0c0;
-    position: absolute;
-    top: 55%;
-    right: 50px;
-    transform: translateY(-50%); }
-    .container-index .controller #line1, .container-index .controller #line2, .container-index .controller #line3, .container-index .controller #line4 {
-      height: 80px;
-      width: 10px;
-      cursor: pointer;
-      transform: translatex(-50%); }
-    .container-index .controller #active {
-      width: 5px;
-      height: 80px;
-      border-radius: 10px;
-      background: #fff;
-      position: absolute;
-      top: 0;
-      transform: translatex(-50%);
-      transition: 0.5s; }
+      width: 40px;
+      height: 40px;
+      line-height: 38px;
+      display: inline-block;
+      text-align: center;
+      border-radius: 50%;
+      margin: 0 8px; }
