--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,12 +92,42 @@ footer {
     text-align: center;
     padding-bottom: 25px;
     color: #fff; }
+    footer .footer-social h3 {
+      font-size: 20px;
+      font-family: "Besley", serif;
+      text-decoration: underline; }
     footer .footer-social a {
-      color: #fff;
+      color: #ccc;
       width: 40px;
       height: 40px;
       line-height: 38px;
       display: inline-block;
       text-align: center;
       border-radius: 50%;
-      margin: 0 8px; }
+      margin: 0 8px;
+      font-size: 20px; }
+    footer .footer-social i {
+      transition: 0.5s; }
+    footer .footer-social i:hover {
+      color: #b61928; }
+  footer .footer-list {
+    list-style: none;
+    text-align: start; }
+    footer .footer-list h3 {
+      color: #fff;
+      text-decoration: underline;
+      font-family: "Besley", serif;
+      font-size: 20px; }
+    footer .footer-list li a {
+      color: #ccc;
+      text-decoration: none; }
+  footer .libros-footer {
+    list-style: none;
+    text-align: start; }
+    footer .libros-footer h3 {
+      color: #fff;
+      text-decoration: underline;
+      font-size: 20px;
+      font-family: "Besley", serif; }
+    footer .libros-footer li {
+      color: #ccc; }
