modifique estilo en footer

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -141,7 +141,7 @@ footer {
     }
     .footer-list {
         list-style: none;
-        text-align: start;
+        text-align: center;
         h3 {
             color: #fff;
             font-family: $font3;
@@ -156,7 +156,7 @@ footer {
     }
     .libros-footer {
         list-style: none;
-        text-align: start;
+        text-align: center;
         h3 {
             color: #fff;
             font-size: 20px;
@@ -168,7 +168,7 @@ footer {
     }
     .editoriales-footer {
         list-style: none;
-        text-align: start;
+        text-align: center;
         h3 {
             color: #fff;
             font-size: 20px;
