--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ footer {
       color: #b61928; }
   footer .footer-list {
     list-style: none;
-    text-align: start; }
+    text-align: center; }
     footer .footer-list h3 {
       color: #fff;
       font-family: "Besley", serif;
@@ -121,7 +121,7 @@ footer {
       text-decoration: none; }
   footer .libros-footer {
     list-style: none;
-    text-align: start; }
+    text-align: center; }
     footer .libros-footer h3 {
       color: #fff;
       font-size: 20px;
@@ -130,7 +130,7 @@ footer {
       color: #ccc; }
   footer .editoriales-footer {
     list-style: none;
-    text-align: start; }
+    text-align: center; }
     footer .editoriales-footer h3 {
       color: #fff;
       font-size: 20px;
