comence pagina libros

--- a/assets/scss/_Variables.scss
+++ b/assets/scss/_Variables.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap');
 $font1 :'Amita', cursive;
-$font2 :'Montserrat', sans-seri;
+$font2 :'Montserrat', sans-serif;
 $font3 : 'Besley', serif;
 $shadow:  0px 8px 16px 0px rgba(0,0,0,0.2);
 $color1: #b61928;
