--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,47 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
+.content-bread {
+  margin: 0 10em; }
+  .content-bread .bread-libros .bread-lista {
+    list-style: none; }
+    .content-bread .bread-libros .bread-lista .bread-lista__item {
+      display: inline-block; }
+      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link {
+        text-decoration: none;
+        color: #575555; }
+      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--home:hover {
+        color: #000;
+        text-decoration: underline;
+        transform: translateX(-50%); }
+      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--libros::before {
+        content: '/'; }
+      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--libros {
+        color: #b61928;
+        font-weight: bold;
+        font-size: 18px; }
+
+.hero {
+  background-color: #ccc;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 12em; }
+  .hero h2 {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Montserrat", sans-serif; }
+  .hero p {
+    font-family: "Montserrat", sans-serif; }
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-seri;
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box; }
 
 .container-principal .index {
