--- a/views/productos.html
+++ b/views/productos.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atenas Libros</title>
 </head>
+
 <body>
     <div class="container container-principal">
         <div class="index container">
@@ -27,7 +29,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="libros nav-link " href="./views/productos.html">Libros</a>
-                                
+
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Editorial</a>
@@ -40,8 +42,25 @@
                 </div>
             </nav>
         </div>
+    </div>
 
+        <div class="container-fluid content-bread">
+            <nav class="bread-libros">
+                <ul class="bread-lista">
+                    <li class="bread-lista__item"><a class="bread__link bread__link--home" href="../index.html"><i
+                                class="fas fa-long-arrow-alt-left"></i> Home</a>
+                    </li>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--libros" href="#"> Libros</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
 
+        <div class="hero container-fluid">
+            <h2>Escoge el genero</h2>
+            <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu búsqueda.</p>
+        </div>
 
 </body>
+
 </html>
