--- a/views/productos.html
+++ b/views/productos.html
@@ -44,23 +44,30 @@
         </div>
     </div>
 
-        <div class="container-fluid content-bread">
-            <nav class="bread-libros">
-                <ul class="bread-lista">
-                    <li class="bread-lista__item"><a class="bread__link bread__link--home" href="../index.html"><i
-                                class="fas fa-long-arrow-alt-left"></i> Home</a>
-                    </li>
-                    <li class="bread-lista__item"><a class="bread__link bread__link--libros" href="#"> Libros</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+    <div class="container-fluid content-bread">
+        <nav class="bread-libros">
+            <ul class="bread-lista">
+                <li class="bread-lista__item"><a class="bread__link bread__link--home" href="../index.html"><i
+                            class="fas fa-long-arrow-alt-left"></i> Home</a>
+                </li>
+                <li class="bread-lista__item"><a class="bread__link bread__link--libros" href="#"> Libros</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
-        <div class="hero container-fluid">
-            <h2>Escoge el genero</h2>
-            <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu búsqueda.</p>
-        </div>
+    <div class="hero container-fluid">
+        <h2>Escoge el genero</h2>
+        <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu
+            búsqueda.</p>
+    </div>
 
+
+
+    
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
 </body>
 
 </html>
