--- a/views/productos.html
+++ b/views/productos.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
+    <meta name="keywords" content="Atenas, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Envios Gratis">
+    <meta name="description" content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atenas Libros</title>
