--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,6 +19,15 @@
                 font-size: 30px;
                 color: cadetblue !important;
             }
+            .carrito {
+                font-size: 30px;
+                color: cadetblue;
+            }
+            .carrito:hover {
+                cursor: pointer;
+                color: $color1;
+                font-size: 35px;
+            }
         }
         
         .content-home {
