--- a/views/productos.html
+++ b/views/productos.html
@@ -41,6 +41,7 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="#"><i class="carrito fab fa-shopify"></i></a>
                 </div>
             </nav>
         </div>
@@ -64,7 +65,46 @@
             búsqueda.</p>
     </div>
 
+<main class="main__books">
+<!-- container para productos -->
+    <div class="container libros__container mb-5-mt-5">
+        <div class="row">
 
+            <!-- card 1 -->
+            <div class="col-md-4 an">
+                <div class="card libros__tarjetas mt-3">
+                    <div class="product-1 align-items-center p-2 text-center">
+                        <img src="../assets/media/libros/asedioytormenta.jpg" alt="" class="rounded" width="160">
+                        <h5>Asedio y Tormenta</h5>
+                        <!-- card info -->
+                        <div class="mt-3 info">
+                            <span class="text1 d-block">Lorem ipsum dolor sit amet.</span>
+                            <span class="text1">Lorem ipsum dolor sit amet.</span>
+                        </div>
+                        <div class="cost mt-3 text-dark">
+                            <span>$2700</span>
+                            <div class="star mt-3 align-items-center">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <!-- card info end -->
+                    </div>
+
+                    <!-- boton card -->
+                    <div class="p-3 asedio text-center text-white mt-3 cursor">
+                        <span class="text-uppercase">add to car</span>
+                    </div>
+                </div>
+            </div>
+            <!-- card 1 end -->
+        </div>
+    </div>
+<!-- container end -->
+</main>
 
     
 
