--- a/views/productos.html
+++ b/views/productos.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="keywords" content="Atenas, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Envios Gratis">
-    <meta name="description" content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
+    <meta name="keywords"
+        content="Atenas, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Envios Gratis">
+    <meta name="description"
+        content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atenas Libros</title>
@@ -60,56 +62,54 @@
     </div>
 
     <div class="hero container-fluid">
-        <h2>Escoge el genero</h2>
+        <h1>Escoge el genero</h1>
         <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu
             búsqueda.</p>
     </div>
 
-<main class="main__books">
-<!-- container para productos -->
-    <div class="container libros__container mb-5-mt-5">
-        <div class="row">
 
-            <!-- card 1 -->
-            <div class="col-md-4 an">
-                <div class="card libros__tarjetas mt-3">
-                    <div class="product-1 align-items-center p-2 text-center">
-                        <img src="../assets/media/libros/asedioytormenta.jpg" alt="" class="rounded" width="160">
-                        <h5>Asedio y Tormenta</h5>
-                        <!-- card info -->
-                        <div class="mt-3 info">
-                            <span class="text1 d-block">Lorem ipsum dolor sit amet.</span>
-                            <span class="text1">Lorem ipsum dolor sit amet.</span>
-                        </div>
-                        <div class="cost mt-3 text-dark">
-                            <span>$2700</span>
-                            <div class="star mt-3 align-items-center">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                        </div>
-                        <!-- card info end -->
-                    </div>
-
-                    <!-- boton card -->
-                    <div class="p-3 asedio text-center text-white mt-3 cursor">
-                        <span class="text-uppercase">add to car</span>
-                    </div>
-                </div>
+<main>
+    <div class="container container-main-libros">
+        <div class="row content__cards">
+            <div class="card__body col col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <img src="../assets/media/libros/bajo-las-estrellas.jpg" alt="bajo-las-estrellas">
+                <h2>Bajo las Estrellas</h2>
+                <p>$1300</p>
+                <a href="#" class="btn">Comprar</a>
             </div>
-            <!-- card 1 end -->
+            <!-- card -->
+            <div class="card__body col col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <img src="../assets/media/libros/bajo-las-estrellas.jpg" alt="bajo-las-estrellas">
+                <h2>Bajo las Estrellas</h2>
+                <p>$1300</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <!-- card -->
+            <div class="card__body col col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <img src="../assets/media/libros/bajo-las-estrellas.jpg" alt="bajo-las-estrellas">
+                <h2>Bajo las Estrellas</h2>
+                <p>$1300</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <!-- card -->
+            <div class="card__body col col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <img src="../assets/media/libros/bajo-las-estrellas.jpg" alt="bajo-las-estrellas">
+                <h2>Bajo las Estrellas</h2>
+                <p>$1300</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
         </div>
     </div>
-<!-- container end -->
 </main>
 
-    
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+        integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
