--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,68 +4,87 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amita:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,500&display=swap");
-.content-bread {
-  margin: 0 10em; }
-  .content-bread .bread-libros .bread-lista {
-    list-style: none; }
-    .content-bread .bread-libros .bread-lista .bread-lista__item {
-      display: inline-block; }
-      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link {
-        text-decoration: none;
-        color: #575555; }
-      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--home:hover {
-        color: #000;
-        text-decoration: underline;
-        transform: translateX(-50%); }
-      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--libros::before {
-        content: '/'; }
-      .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--libros {
-        color: #b61928;
-        font-weight: bold;
-        font-size: 18px; }
+.content-bread .bread-libros .bread-lista {
+  list-style: none; }
+  .content-bread .bread-libros .bread-lista .bread-lista__item {
+    display: inline-block; }
+    .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link {
+      text-decoration: none;
+      color: #575555; }
+    .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--home:hover {
+      color: #000;
+      text-decoration: underline;
+      transform: translateX(-50%); }
+    .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--libros::before {
+      content: '/'; }
+    .content-bread .bread-libros .bread-lista .bread-lista__item .bread__link--libros {
+      color: #b61928;
+      font-weight: bold;
+      font-size: 18px; }
 
 .hero {
-  background-color: #ccc;
-  width: 100%;
-  height: 200px;
+  background-color: cadetblue;
+  height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  padding-left: 12em; }
+  align-items: flex-start; }
   .hero h1 {
     text-transform: uppercase;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 700;
     font-family: "Montserrat", sans-serif; }
   .hero p {
     font-family: "Montserrat", sans-serif; }
 
+.navbar-filtros {
+  margin-top: 1em; }
+  .navbar-filtros .generos__filtros {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+    .navbar-filtros .generos__filtros a {
+      text-decoration: none;
+      color: #000;
+      border-bottom: 1px solid cadetblue;
+      padding: 5px;
+      transition: 0.4s; }
+    .navbar-filtros .generos__filtros a:hover {
+      color: #ccc;
+      transform: translateY(5px); }
+
 .container-main-libros {
-  margin-top: 5em; }
+  margin-top: 2em; }
   .container-main-libros .content__cards {
+    grid-gap: 1em;
     display: flex;
     justify-content: space-between; }
+    .container-main-libros .content__cards .card__body:hover {
+      transition: transform .3s;
+      transform: translateY(-15px); }
     .container-main-libros .content__cards .card__body {
+      margin: 1em auto;
       display: flex;
       flex-direction: column;
       border: 1px solid rgba(128, 128, 128, 0.253);
-      border-radius: 5px;
+      border-radius: 8px;
       width: 15em;
       height: 25em; }
       .container-main-libros .content__cards .card__body img {
         width: 13em;
-        height: 20em; }
+        height: 18em; }
       .container-main-libros .content__cards .card__body h2 {
-        text-align: start;
-        font-size: 15px;
+        text-align: center;
+        font-size: 12px;
         font-weight: 700;
-        font-family: "Besley", serif; }
+        font-family: "Besley", serif;
+        transform: translateY(5px); }
       .container-main-libros .content__cards .card__body p {
+        text-align: center;
         font-size: 15px;
         font-family: "Amita", cursive; }
       .container-main-libros .content__cards .card__body .btn {
-        background-color: #b61928;
+        background-color: cadetblue;
         width: 100px;
         color: #fff;
         transform: translateX(50px); }
@@ -78,19 +97,19 @@
   font-family: "Montserrat", sans-serif;
   box-sizing: border-box; }
 
-.container-principal .index {
-  width: 1000px; }
-  .container-principal .index .logo {
-    font-family: "Amita", cursive;
-    font-size: 30px;
-    color: cadetblue !important; }
-  .container-principal .index .carrito {
-    font-size: 30px;
-    color: cadetblue; }
-  .container-principal .index .carrito:hover {
-    cursor: pointer;
-    color: #b61928;
-    font-size: 35px; }
+.container-principal .index .logo {
+  font-family: "Amita", cursive;
+  font-size: 30px;
+  color: cadetblue !important; }
+
+.container-principal .index .carrito {
+  font-size: 30px;
+  color: cadetblue; }
+
+.container-principal .index .carrito:hover {
+  cursor: pointer;
+  color: #b61928;
+  font-size: 35px; }
 
 .container-principal .content-home {
   margin: 0 auto; }
@@ -164,6 +183,7 @@
       background-color: #000; }
 
 footer {
+  margin-top: 5em;
   padding: 40px 0;
   background-color: cadetblue; }
   footer .footer-social {
