--- a/views/productos.html
+++ b/views/productos.html
@@ -13,7 +13,7 @@
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atenas Libros</title>
+    <title>Compra LIBROS en Atenas</title>
 </head>
 
 <body>
