--- a/views/productos.html
+++ b/views/productos.html
@@ -63,10 +63,10 @@
         <div class="container-fluid content-bread">
             <nav class="bread-libros">
                 <ul class="bread-lista">
-                    <li class="bread-lista__item"><a class="bread__link bread__link--home" href="../index.html"><i
+                    <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
                                 class="fas fa-long-arrow-alt-left"></i> Home</a>
                     </li>
-                    <li class="bread-lista__item"><a class="bread__link bread__link--libros" href="#"> Libros</a>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--red" href="#"> Libros</a>
                     </li>
                 </ul>
             </nav>
@@ -84,7 +84,7 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="#">Fantasia</a>
+                <a href="../views/fantasia.html">Fantasia</a>
                 <a href="#">Ficcion</a>
                 <a href="#">Terror</a>
                 <a href="#">Romance</a>
@@ -98,28 +98,28 @@
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="bajo-las-estrellas">
                     <h2>Bajo las Estrellas</h2>
-                    <p>$1300</p>
+                    <p>$1.300</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="riverdale">
                     <h2>Riverdale, El dia anterior</h2>
-                    <p>$1500</p>
+                    <p>$1.500</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="sabrina">
                     <h2>Sabrina, El camino de la Bruja</h2>
-                    <p>$1500</p>
+                    <p>$1.500</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Lo poco que sabemos">
                     <h2>Lo poco que sabemos</h2>
-                    <p>$2190</p>
+                    <p>$2.190</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -130,28 +130,28 @@
                     <img src="../assets/media/libros/ficcion/la-vida-invisible-de.jpg"
                         alt="la vida invisible de addie larue">
                     <h2>La vida invisible de Addie Larue</h2>
-                    <p>$1800</p>
+                    <p>$1.800</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="asedioytormenta">
                     <h2>Asedio y Tormenta</h2>
-                    <p>$2700</p>
+                    <p>$2.700</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="Las lunas de sartre">
                     <h2>Las Lunas de Sartre</h2>
-                    <p>$1900</p>
+                    <p>$1.900</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/lore.png" alt="Lore">
                     <h2>Lore</h2>
-                    <p>$1990</p>
+                    <p>$1.990</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
@@ -161,21 +161,21 @@
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="el rey malvado">
                     <h2>El Rey Malvado</h2>
-                    <p>$2500</p>
+                    <p>$2.500</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="El ultimo mago">
                     <h2>El Ultimo Mago</h2>
-                    <p>$1999</p>
+                    <p>$1.999</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/fantasia/matar-un-reino.jpg" alt="matar un reino">
                     <h2>Matar un Reino</h2>
-                    <p>$1990</p>
+                    <p>$1.990</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
@@ -183,7 +183,7 @@
                     <img src="../assets/media/libros/fantasia/manuscritos-rojos.png"
                         alt="los manuscritos rojos de la magia">
                     <h2>Los Manuscritos rojos de la Magia</h2>
-                    <p>$2190</p>
+                    <p>$2.190</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
