--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta name="keywords"
         content="Atenas, Libros, Libreria, Harry Potter, Lore, Fantasia, Tienda online, Envios Gratis">
-        <meta name="description"
+    <meta name="description"
         content="Todos los Libros que necesitas/buscas de FANTASIA, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra libros FANTASIA</title>
 </head>
+
 <body>
     <header>
         <div class="container container-principal">
@@ -32,7 +34,7 @@
                                     <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link " href="./views/productos.html">Libros</a>
+                                    <a class="libros nav-link " href="./productos.html">Libros</a>
 
                                 </li>
                                 <li class="nav-item">
@@ -61,21 +63,196 @@
         <div class="container-fluid content-bread">
             <nav class="bread-libros">
                 <ul class="bread-lista">
-                    <li class="bread-lista__item"><a class="bread__link bread__link--home" href="../index.html"><i
-                                class="fas fa-long-arrow-alt-left"></i> Home</a>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
+                                class="fas fa-long-arrow-alt-left"></i> Home </a>
                     </li>
-                    <li class="bread-lista__item"><a class="bread__link bread__link--libros" href="#"> Fantasia</a>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--back"
+                            href="../views/productos.html"> Libros </a>
+                    </li>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--red" href=""> Fantasia</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
 
+    <main>
+        <div class="hero container-fluid">
+            <h1>Escoge el genero</h1>
+            <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu
+                búsqueda.</p>
+        </div>
+
+
+        <!-- filtros -->
+        <div class="container navbar-filtros">
+            <div class="generos__filtros">
+                <a href="" id="fantasia-block">Fantasia</a>
+                <a href="#">Ficcion</a>
+                <a href="#">Terror</a>
+                <a href="#">Romance</a>
+            </div>
+        </div>
+
+        <!-- productos -->
+        <div class="container container-main-libros">
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/asesino-brujas.jpg" alt="asesino de brujas">
+                    <h2>Asesino de Brujas</h2>
+                    <p>$1.790</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/las-lunas-de-sartre.jpg" alt="">
+                    <h2>Las Lunas de Sartre</h2>
+                    <p>$1.900</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/lore.png" alt="">
+                    <h2>Lore</h2>
+                    <p>$1.990</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/manuscritos-rojos.png" alt="">
+                    <h2>Los manuscritos rojos de la magia</h2>
+                    <p>$2.190</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/matar-un-reino.jpg" alt="matar un reino">
+                    <h2>Matar un Reino</h2>
+                    <p>$1.990</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="rey malvado">
+                    <h2>El Rey malvado</h2>
+                    <p>$2.500</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/ultimo-mago.jpg" alt="ultimo mago">
+                    <h2>El Ultimo Mago</h2>
+                    <p>$1.999</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/asedioytormenta.jpg" alt="asedioytormenta">
+                    <h2>Asedio y Tormenta</h2>
+                    <p>$2.700</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+            <!-- row -->
+            <div class="row content__cards">
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/supernova.jpg" alt="supernova">
+                    <h2>Supernova</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/rey-elfhame.jpg" alt="como el rey de Elfhame aprendio">
+                    <h2>Como el Rey Elfhame aprendio a ..</h2>
+                    <p>$2.789</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/maze-runner.png" alt="maze runner">
+                    <h2>Maze Runner, Correr o morir</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+                <!-- card -->
+                <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
+                    <img src="../assets/media/libros/fantasia/maze-3.png" alt="maze runner 3">
+                    <h2>Maze Runner, la cura mortal</h2>
+                    <p>$1.399</p>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- footer -->
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
+                <h3>Redes Sociales</h3>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+            </div>
+
+            <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
+                <h3>Navegacion</h3>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Editorial</a>
+                </li>
+                <li>
+                    <a href="#">Libros</a>
+                </li>
+                <li>
+                    <a href="#">Informacion</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+            <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
+                <h3>Libros</h3>
+                <li>Ficcion</li>
+                <li>Fantasia</li>
+                <li>Romance</li>
+                <li>Terror</li>
+            </ul>
+            <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
+                <h3>Editoriales</h3>
+                <li>Salamandra</li>
+                <li>Hidra Editorial</li>
+                <li>Naranja</li>
+                <li>Vyr Editorial</li>
+                <li>Puck Editorial</li>
+            </ul>
+            <div class="row fila-copy-footer">
+                <p class="copyright col col-sm-12 col-md-12 col-lg-12">
+                    Copyright © Editoriales mencionadas
+                </p>
+            </div>
+        </div>
+
+    </footer>
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
